--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+.App {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -7,6 +13,10 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+}
+
+.App-header {
+  width: 80%;
 }
 
 .App-link {
